[gd_scene load_steps=28 format=2]

[ext_resource path="res://assets/world_objects/door_horizontal/door_anim_close.png" type="Texture" id=1]
[ext_resource path="res://assets/world_objects/door_horizontal/door_anim_open.png" type="Texture" id=2]
[ext_resource path="res://src/doors/door.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 2.42911 )

[sub_resource type="CapsuleShape2D" id=2]

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 568, 0, 71, 32 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 448, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 576, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 448, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 576, 0, 64, 32 )

[sub_resource type="SpriteFrames" id=23]
animations = [ {
"frames": [ SubResource( 24 ) ],
"loop": false,
"name": "default",
"speed": 20.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": false,
"name": "close_door",
"speed": 20.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": false,
"name": "open_door",
"speed": 20.0
} ]

[node name="Door" type="StaticBody2D"]
position = Vector2( -0.353149, 0 )
collision_layer = 4
script = ExtResource( 3 )

[node name="door_colistion" type="CollisionShape2D" parent="."]
position = Vector2( -9.53674e-07, 10.9478 )
scale = Vector2( 3.19317, 1.58666 )
shape = SubResource( 1 )

[node name="trigger_door" type="Area2D" parent="."]
position = Vector2( -10.6401, 25.8265 )

[node name="door_trigger" type="CollisionShape2D" parent="trigger_door"]
position = Vector2( 10.6401, -25.8265 )
scale = Vector2( -4.332, 1.76429 )
shape = SubResource( 2 )

[node name="door" type="AnimatedSprite" parent="."]
frames = SubResource( 23 )
animation = "close_door"

[connection signal="body_entered" from="trigger_door" to="." method="_on_door_entered"]
[connection signal="body_exited" from="trigger_door" to="." method="_on_door_exited"]
